@@ -2,22 +2,25 @@
 # Library for simple scene modelling.
 # Jose Juan Montes 2020
 
+import math
+import random
+
+from csg import geom as csggeom
+from csg.core import CSG
+import noise
+import pyproj
 from shapely import geometry
-from trimesh.path import segments
-from trimesh.scene.scene import Scene, append_scenes
-from trimesh.base import Trimesh
-from trimesh.path.path import Path
-from trimesh.visual.material import SimpleMaterial
+from shapely.geometry.polygon import LinearRing
 from trimesh import creation, primitives, boolean
 import trimesh
-from csg.core import CSG
-from csg import geom as csggeom
-import random
+from trimesh.base import Trimesh
+from trimesh.path import segments
+from trimesh.path.path import Path
+from trimesh.scene.scene import Scene, append_scenes
+from trimesh.visual.material import SimpleMaterial
+
 from ddd.ddd import ddd
-import noise
 from ddd.georaster import ElevationChunk
-import pyproj
-import math
 
 
 def map_2d_path(obj, path):
@@ -26,24 +29,21 @@ def map_2d_path(obj, path):
     This method does not create a copy of objects, affecting the hierarchy.
     """
 
-    def height_apply_func(x, y, z, idx):
-        # Find nearest point in path, and return its height
+    def uv_apply_func(x, y, z, idx):
+        # Find nearest point in path
         d = path.geom.project(ddd.point([x, y, z]).geom)
+        #print(x, y, z, idx, d, path)
         p, segment_idx, segment_coords_a, segment_coords_b = path.interpolate_segment(d)
-
-        dir_vec = (segment_coords_b[0] - segment_coords_a[0], segment_coords_b[1] - segment_coords_a[1])
-        dir_vec_length = math.sqrt(dir_vec[0] ** 2 + dir_vec[1] ** 2)
-        if dir_vec_length > 0:
-            dir_vec = (dir_vec[0] / dir_vec_length, dir_vec[1] / dir_vec_length)
-            angle = math.atan2(dir_vec[1], dir_vec[0])
-
-        return (0.1 * random.choice([-1, 1]), d)
+        pol = LinearRing([segment_coords_a, segment_coords_b, [x, y, z]])
+        return (0.1 * (-1 if pol.is_ccw else 1), d)
 
     result = obj
-    result.extra['uv'] = [height_apply_func(v[0], v[1], 0.0, idx) for idx, v in enumerate(obj.geom.exterior.coords)]
+    if obj.geom:
+        result.extra['uv'] = [uv_apply_func(v[0], v[1], 0.0, idx) for idx, v in enumerate(obj.geom.exterior.coords)]
 
     result.children = [map_2d_path(c, path) for c in obj.children]
     return result
+
 
 def map_3d_random(obj_3d):
     """
@@ -58,21 +58,26 @@ def map_3d_random(obj_3d):
 
 def map_3d_from_2d(obj_3d, obj_2d):
     """
+    Apply 2D UV coordinates to 3D shapes (using UV from closest point in 2D space).
+    This method does not create a copy of objects.
     """
-    #print(obj_2d.extra)
-    path = obj_2d.extra['way_1d']
 
     def uv_apply_func(x, y, z, idx):
-        # Find nearest point in path, and return its height
-        d = path.geom.project(ddd.point([x, y, z]).geom)
-        closest_segment = path.interpolate_segment(d)
-        #print ("%s, %s, %s => %s, %s" % ( x, y, z, 0.05 * random.choice([-1, 1]), d / 10.0))
-        return (0.1 * random.choice([-1, 1]), d / 10.0)
+        # Find nearest point in shape, and return its height
+        closest_uv = obj_2d.extra['uv'][0]
+        closest_distsqr = float('inf')
+        for idx, v in enumerate(obj_2d.geom.exterior.coords):
+            point_2d = [v[0], v[1], 0]
+            diff = [point_2d[0] - x, point_2d[1] - y]
+            distsqr = (diff[0] ** 2) + (diff[1] ** 2)
+            if (distsqr < closest_distsqr):
+                closest_uv = obj_2d.extra['uv'][idx]
+                closest_distsqr = distsqr
+        #print (closest_uv)
+        return closest_uv
 
     result = obj_3d
     if obj_3d.mesh:
         result.extra['uv'] = [uv_apply_func(v[0], v[1], v[2], idx) for idx, v in enumerate(obj_3d.mesh.vertices)]
     result.children = [map_3d_from_2d(c, obj_2d) for c in result.children]
     return result
-
-
