@@ -44,7 +44,7 @@ class ItemsOSMBuilder():
         self.pool = {}
         #self.pool['tree'] = [self.generate_item_3d_tree(ddd.point([0, 0, 0])) for i in range(8)]
 
-        self.tree_decimate = 3
+        self.tree_decimate = 1
         self.tree_decimate_idx = 0
 
     def generate_items_1d(self):
@@ -97,7 +97,7 @@ class ItemsOSMBuilder():
 
         elif item_2d.extra.get('natural', None) == 'tree':
             self.tree_decimate_idx += 1
-            if self.tree_decimate > 1 and self.tree_decimate_idx % self.tree_decimate == 0:
+            if self.tree_decimate <= 1 or self.tree_decimate_idx % self.tree_decimate == 0:
                 #item_3d = random.choice(self.pool['tree']).instance()
                 #coords = item_2d.geom.coords[0]
                 #item_3d = item_3d.translate([coords[0], coords[1], 0.0])
@@ -122,7 +122,12 @@ class ItemsOSMBuilder():
     def generate_item_3d_tree(self, item_2d):
         #print("Tree")
         coords = item_2d.geom.coords[0]
-        item_3d = plants.plant(height=random.uniform(3.0, 5.5)).translate([coords[0], coords[1], 0.0])
+
+        plant_height = random.normalvariate(8.0, 3.0)
+        if plant_height < 3.0: plant_height=random.uniform(3.0, 5.5)
+        if plant_height > 15.0: plant_height=random.uniform(12.0, 15.0)
+        #item_3d = plants.plant(height=random.uniform(3.0, 5.5)).translate([coords[0], coords[1], 0.0])
+        item_3d = plants.plant(height=plant_height).translate([coords[0], coords[1], 0.0])
         for i in item_3d.filter(lambda o: o.extra.get('foliage', None)).children:
             i.extra['ddd:collider'] = False  # TODO: generation details shall be optional
         item_3d.name = 'Tree: %s' % item_2d.name
@@ -165,7 +170,7 @@ class ItemsOSMBuilder():
 
     def generate_item_3d_lamppost(self, item_2d):
         coords = item_2d.geom.coords[0]
-        item_3d = urban.lamppost(height=5.5).translate([coords[0], coords[1], 0.0])
+        item_3d = urban.lamppost(height=5.5, r=0.35).translate([coords[0], coords[1], 0.0])
         item_3d.children[0] = item_3d.children[0].material(self.osm.mat_forgery)  # mat_bronze
         item_3d.children[1] = item_3d.children[1].material(self.osm.mat_lightbulb)  # FIXME: do not access children by index, assign mat in lib anyway
 
