@@ -16,11 +16,8 @@ import pyproj
 from shapely import geometry
 from shapely.geometry import shape
 from shapely.geometry.geo import shape
+from shapely.geometry.linestring import LineString
 from shapely.ops import transform
-
-from ddd.ddd import DDDObject2, DDDObject3
-from ddd.ddd import ddd
-from ddd.pack.sketchy import terrain, plants, urban
 from trimesh import creation, primitives, boolean
 import trimesh
 from trimesh.base import Trimesh
@@ -28,13 +25,16 @@ from trimesh.path import segments
 from trimesh.path.path import Path
 from trimesh.scene.scene import Scene, append_scenes
 from trimesh.visual.material import SimpleMaterial
-from shapely.geometry.linestring import LineString
-from ddd.osm.buildings import BuildingOSMBuilder
-from ddd.osm.ways import WaysOSMBuilder
-from ddd.osm.areas import AreasOSMBuilder
-from ddd.osm.items import ItemsOSMBuilder
+
+from ddd.ddd import DDDObject2, DDDObject3
+from ddd.ddd import ddd
 from ddd.osm.areaitems import AreaItemsOSMBuilder
+from ddd.osm.areas import AreasOSMBuilder
+from ddd.osm.buildings import BuildingOSMBuilder
 from ddd.osm.custom import CustomsOSMBuilder
+from ddd.osm.items import ItemsOSMBuilder
+from ddd.osm.ways import WaysOSMBuilder
+from ddd.pack.sketchy import terrain, plants, urban
 
 
 # Get instance of logger for this module
